--- a/themes/awesome/templates/swagger-ui.html.twig
+++ b/themes/awesome/templates/swagger-ui.html.twig
@@ -26,7 +26,10 @@ window.onload = function() {
     plugins: [
       SwaggerUIBundle.plugins.DownloadUrl
     ],
-    layout: "StandaloneLayout"
+    layout: "StandaloneLayout",
+    requestInterceptor: function(a) {
+      this.headers['X-CSRF-token'] = "not a real token, but a placeholder";
+    }
   })
 
   window.ui = ui
